# vitals-monitoring-model

./: .gitignore  README.md  config.py  pyproject.toml
vitals_monitoring/: data_logger.py  fusion.py  main.py  overlay.py
vitals_monitoring/preprocessing/: chrom.py  roi_extraction.py
vitals_monitoring/vitals_calculation/: heart_rate.py  hrv_metrics.py  rppg.py  spo2.py  stress_index.py  tscan_model.py
